@@ -8,29 +8,7 @@ RUN apk add --no-cache openjdk17 --repository=https://dl-cdn.alpinelinux.org/alp
 # Build project
 COPY . /rmd
 WORKDIR /rmd
-RUN ./gradlew shadowJar
-
-### JRE Image ###
-FROM alpine:edge AS JRE_IMAGE
-
-# Installing OpenJDK 17
-RUN apk add --no-cache openjdk17 binutils --repository=https://dl-cdn.alpinelinux.org/alpine/edge/community
-
-WORKDIR /tmp
-COPY --from=BUILD_IMAGE /rmd/build/libs/rmd-1.0-all.jar /tmp/rmd.jar
-RUN unzip rmd.jar
-RUN jdeps --print-module-deps --ignore-missing-deps --recursive --multi-release 17 \
-    --class-path="BOOT-INF/lib/*" --module-path="BOOT-INF/lib/*" rmd.jar > /deps.txt
-
-# Build small JRE image
-RUN jlink --verbose \
-         --add-modules $(cat /deps.txt) \
-         --add-modules jdk.crypto.ec \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /customjre
+RUN ./gradlew nativeBinaries
 
 ### Main Image ###
 FROM alpine:edge
@@ -38,17 +16,12 @@ LABEL maintainer="Vinicius Egidio <me@vinicius.io>"
 
 # Dependencies
 RUN apk add --no-cache ffmpeg && \
-    apk add --no-cache yt-dlp czkawka --repository=https://dl-cdn.alpinelinux.org/alpine/edge/community
-
-# Create custom JRE
-ENV JAVA_HOME=/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-COPY --from=JRE_IMAGE /customjre $JAVA_HOME
+    apk add --no-cache yt-dlp --repository=https://dl-cdn.alpinelinux.org/alpine/edge/community
 
 # Define the image version
 ARG VERSION
 ENV IMAGE_VERSION=$VERSION
 
-COPY --from=BUILD_IMAGE /rmd/build/libs/rmd-1.0-all.jar /var/rmd.jar
+COPY --from=BUILD_IMAGE /rmd/build/bin/native/releaseExecutable/rmd.kexe /var/rmd.kexe
 
-ENTRYPOINT ["java", "-jar", "/var/rmd.jar"]
+ENTRYPOINT ["/var/rmd.kexe"]
